--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^12.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-scrollable-feed": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
