--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^12.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie": "^1.2.10",
+    "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.3.4",
     "react-scrollable-feed": "^2.0.3",
     "socket.io-client": "^4.8.1"
